[package]
name = "msm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
num-complex = "0.4.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
rodeo = { path = "../../../Projects/rodeo" }
torx = { path = "../../../Projects/torx" }